# f1copy

./: .gitignore  CMakeLists.txt  KeyHook.cpp  KeyHook.h  ScancodeMap.cpp  ScancodeMap.h  SplashWnd.cpp  SplashWnd.h  TaskReg.cpp  TaskReg.h  TrayIcon.cpp  TrayIcon.h  Version.h  build.bat  f1copy.md  f1copy.rc  main.cpp  readme-j.txt  readme.txt  resource.h
